2009-10-12  Lassi A. Tuura  <lat@iki.fi>

	* src/IgProf.cc: Prevent profiling in the auxiliary thread which
	is used to dump profiles; it tends to go into busy loop on RHEL5.
	* src/IgProfPerf.cc: Do not prevent blocking profiling signals in
	threads which do not have a profiling timer running. Report the
	signal handler and profiling interval in the debug output.

2009-10-11  Lassi A. Tuura  <lat@iki.fi>

	* scripts/igprof-func: Eliminate all apostrophes, not just one.

2009-09-30  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc: print a syntax error if the igprof file is
	  malformed.

2009-09-29  Giulio Eulisse <giulio.eulisse@cern.ch>
	
	* igprof-navigator: better way of handling the differential outputs.

	* igprof-navigator: fixes python 2.4 incompatibility issue.   

2009-09-26  Lassi A. Tuura  <lat@iki.fi>

	* IgProfMem.cc, igprof: Add new option to report overhead in
	memory allocations: requested size vs. actually allocated size.

2009-08-19  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: enable merged and diff reports in non debug mode,
	  since they are stable enough (diff has still one non fatal problem
	  left).

	* igprof-navigator: more fixes for the diff output. Ignore empty
	  queries.

2009-08-13  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: Initial support for diff output.
	  * Read percentages from database, rather than calculate them on the fly.
	  * Supports negative percentages.

	* igprof-navigator: print out summary header only if possible.

	* igprof-navigator: Print out some debug information if internal variable 
	  "debug" is True.

	* IgProfAnalyse.cc: SQLITE output schema now contains percentage
	  information to avoid having to have the percentage logic in the 
	  web browing GUI.

	* IgProfAnalyse.cc: Helper method for printing out percentages added.
	 
2009-08-12  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: supports _merged and _diff25 suffix in debug